.shortcake-attachment-preview's alignment fix

--- a/css/sass/_field-image.scss
+++ b/css/sass/_field-image.scss
@@ -7,9 +7,14 @@
 	}
 
 	.shortcake-attachment-preview {
-		float: left;
+		display: inline-block;
+		vertical-align: top;
 		margin: 0 20px 20px 0;
 		width: 150px;
+
+		div.filename{
+			word-wrap: break-word;
+		}
 	}
 
 	.shortcode-ui-field-attachment .description {
