--- a/css/shortcode-ui.css
+++ b/css/shortcode-ui.css
@@ -115,9 +115,12 @@
   margin-bottom: 15px; }
 
 .edit-shortcode-form .shortcake-attachment-preview {
-  float: left;
+  display: inline-block;
+  vertical-align: top;
   margin: 0 20px 20px 0;
   width: 150px; }
+  .edit-shortcode-form .shortcake-attachment-preview div.filename {
+    word-wrap: break-word; }
 
 .edit-shortcode-form .shortcode-ui-field-attachment .description {
   margin: 10px 0; }
